# rules_aws

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  README.md  WORKSPACE  example.cpp  s3_examples.h
docker/: Dockerfile  build.sh  entrypoint.sh  shell.sh
tools/: template_rule.bzl
