cc_binary(
    name = "example",
    srcs = [
        "example.cpp",
        "s3_examples.h",
    ],
    linkopts = [
        "-lpthread",  # Add any additional link options if necessary
    ],
    deps = [
        "@aws//:aws-cpp-sdk-s3",  # Assuming this is the target for the S3 SDK
        "@aws//:aws-cpp-sdk-core",  # Assuming this is the target for the core SDK
        # Add other necessary dependencies here
    ],
)
